# mcp_monday_server

./: .gitignore  Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
src/: common.py  resources.py  server.py  tools.py
src/mcp_monday_server/: __init__.py  common.py  resources.py  server.py  tools.py
