[project]
name = "mcp-monday-server"
version = "0.1.0"
description = "MCP Server for monday.com"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "monday>=2.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.28.1",
]

[[project.authors]]
name = "sofias-ai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_monday_server/*.py",
]

[tool.hatch.build]
packages = ["src/mcp_monday_server"]

[project.scripts]
mcp-monday-server = "mcp_monday_server.server:main"

[project.urls]
Homepage = "https://github.com/Sofias-ai/mcp_monday_server"